[package]
name = "generic-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.*", features = ["full"] }
tracing-subscriber = "0.3.*"
log = "0.4.21"
async-trait = "0.1.*"
crossbeam-channel = "0.5.*"
rayon = "1.9.*"